chore: added tags to the routes for openapi documentatons
