# src/app/api/v1/(dashboard)/customers/route.ts
@@ -1,11 +1,19 @@
 import { getDashboardCustomers } from "@/db/actions/dashboard/customers/actions";
 import { apiDashboardCustomerSchema } from "@/lib/apis/schemas/customers";
 import { checkAPIKeyFromAPI, COMMON_API_ERRORS } from "@/lib/apis/shared";
+import { ApiMetadata } from "@/lib/apis/types";
 import { route, routeOperation, TypedNextResponse } from "next-rest-framework";
 import z from "zod";
 
+const listCustomersMetadata: ApiMetadata = {
+	tags: ["Customers"],
+};
+
 export const { GET } = route({
-	listCustomers: routeOperation({ method: "GET" })
+	listCustomers: routeOperation({
+		method: "GET",
+		openApiOperation: listCustomersMetadata,
+	})
 		.outputs([
 			{
 				status: 200,
